# Polaris

./: CLAUDE.md  Cargo.toml  README.md  THIRD_PARTY.md
.github/workflows/: ci.yml
polaris-docx/: Cargo.toml  THIRD_PARTY.md
polaris-docx/examples/: view_docx.rs
polaris-docx/src/: history.rs  lib.rs
polaris-gui/: Cargo.toml
polaris-gui/src/: main.rs
src/: lib.rs
